--- a/xpdc/JavaSource/com/sma/report/print_rincian_barang.jrxml
+++ b/xpdc/JavaSource/com/sma/report/print_rincian_barang.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created using JasperAssistant (http://www.jasperassistant.com) -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="print_rincian_barang" pageWidth="612" pageHeight="397" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="30" bottomMargin="30">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="print_rincian_barang" pageWidth="612" pageHeight="397" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="30" bottomMargin="30" scriptletClass="com.sma.utils.JasperScriptlet">
 	<property name="com.jasperassistant.designer.Grid" value="false"/>
 	<property name="com.jasperassistant.designer.SnapToGrid" value="false"/>
 	<property name="com.jasperassistant.designer.GridWidth" value="12"/>
@@ -57,16 +57,16 @@ AND a.id = $P{delivery_id}
 			<textField isBlankWhenNull="true" hyperlinkType="None">
 				<reportElement x="67" y="92" width="139" height="15"/>
 				<textElement>
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{nama_supir}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[": " + $F{nama_supir}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="6" y="92" width="58" height="15"/>
 				<textElement>
 					<font fontName="Arial" size="10"/>
 				</textElement>
-				<text><![CDATA[Supir :]]></text>
+				<text><![CDATA[Supir]]></text>
 			</staticText>
 			<line>
 				<reportElement x="0" y="112" width="556" height="1"/>
@@ -74,7 +74,7 @@ AND a.id = $P{delivery_id}
 			<staticText>
 				<reportElement x="211" y="115" width="128" height="15"/>
 				<textElement textAlignment="Left">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[Rincian Barang]]></text>
 			</staticText>
@@ -83,14 +83,14 @@ AND a.id = $P{delivery_id}
 				<textElement>
 					<font fontName="Arial" size="10"/>
 				</textElement>
-				<text><![CDATA[Mobil :]]></text>
+				<text><![CDATA[Mobil]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true" hyperlinkType="None">
 				<reportElement x="67" y="77" width="139" height="15"/>
 				<textElement>
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{no_polisi}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[": " + $F{no_polisi}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="0" y="109" width="556" height="1"/>
@@ -110,75 +110,76 @@ AND a.id = $P{delivery_id}
 				<textElement>
 					<font fontName="Arial" size="10"/>
 				</textElement>
-				<text><![CDATA[Tgl. Muat :]]></text>
+				<text><![CDATA[Tgl. Muat]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="410" y="93" width="73" height="15"/>
 				<textElement>
 					<font fontName="Arial" size="10"/>
 				</textElement>
-				<text><![CDATA[Tgl. Sampai : ]]></text>
+				<text><![CDATA[Tgl. Sampai]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="177" y="115" width="34" height="15"/>
 				<textElement textAlignment="Center">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[Colly]]></text>
 			</staticText>
-			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true" hyperlinkType="None">
 				<reportElement x="486" y="93" width="64" height="15"/>
 				<textElement markup="none">
 					<font fontName="Arial" size="10"/>
 				</textElement>
-				<textFieldExpression class="java.util.Date"><![CDATA[$F{tgl_sampai}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[": " + ( $F{tgl_sampai} == null ? "" : $P{REPORT_SCRIPTLET}.convertDateToString($F{tgl_sampai}, "dd/MM/yyyy") )
+]]></textFieldExpression>
 			</textField>
-			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true" hyperlinkType="None">
+			<textField isBlankWhenNull="true" hyperlinkType="None">
 				<reportElement x="486" y="78" width="64" height="15"/>
 				<textElement>
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression class="java.util.Date"><![CDATA[$F{tgl_kirim}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[": " + $P{REPORT_SCRIPTLET}.convertDateToString($F{tgl_kirim}, "dd/MM/yyyy")]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="6" y="115" width="58" height="15"/>
 				<textElement textAlignment="Left">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[STT]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="64" y="115" width="113" height="15"/>
 				<textElement textAlignment="Left">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[Penerima]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="339" y="115" width="34" height="15"/>
 				<textElement textAlignment="Center">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[Naik]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="373" y="115" width="34" height="15"/>
 				<textElement textAlignment="Center">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[Sisa]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="407" y="115" width="62" height="15"/>
 				<textElement textAlignment="Right">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[Nominal]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="478" y="115" width="76" height="15"/>
 				<textElement textAlignment="Left">
-					<font fontName="Arial" size="10"/>
+					<font fontName="Arial" size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[Keterangan]]></text>
 			</staticText>
